CMAKE_MINIMUM_REQUIRED(VERSION 4.1)

PROJECT(SearchEngine)

SET(CMAKE_CXX_STANDARD 20)

file(GLOB_RECURSE SRC_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

list(FILTER SRC_FILES EXCLUDE REGEX "/cmake[^/]*/")

add_executable(${PROJECT_NAME} ${SRC_FILES})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/abseil-cpp)